<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sandwiches">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#381460"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="30dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorBoton"
            android:onClick="chacarero"
            android:text="@string/butonChacarero"
            android:textColor="#FFBD69"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorBoton"
            android:onClick="churrasco"
            android:text="@string/butonChurrasco"
            android:textColor="#FFBD69"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorBoton"
            android:onClick="fricandela"
            android:text="@string/butonFricandela"
            android:textColor="#FFBD69"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorBoton"
            android:onClick="lomito"
            android:text="@string/butonLomito"
            android:textColor="#FFBD69"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorBoton"
            android:onClick="mechada"
            android:text="@string/butonMechada"
            android:textColor="#FFBD69"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

